# hex_brains

./: .gitignore  Cargo.toml  README.md  refactoring_plan.md  ui_redesign_todos.md  verify.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md  tinyrand.md
engine/: Cargo.toml
engine/src/: core.rs  dna.rs  lib.rs  mutation.rs  neural.rs  sensory.rs  simulation.rs  simulation_manager.rs  test_utils.rs
engine/tests/: integration.rs
gui/: Cargo.toml
gui/src/: app.rs  components.rs  config.rs  drawing.rs  main.rs  tests.rs  ui_helpers.rs  ui_state.rs  windows.rs
