[package]
name = "hex_brains_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = {  version = "0.15.0", features = ["multi_threaded"] }
parking_lot = "0.12"
rayon = "1.8.0"
puffin = "0.17.0"
tinyrand = "0.5.0"
tracing = "0.1.40"

[dev-dependencies]
tinyrand = "0.5.0"
tinyrand-alloc = "0.5.0"

[features]
default = ["integration"]
integration = []