[package]
name = "hex_brains_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = {  version = "0.15.0", features = ["multi_threaded"] }
parking_lot = "0.12"
puffin = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
tinyrand = "0.5.0"
toml = "0.8"
tracing = "0.1.40"

[dev-dependencies]
tinyrand = "0.5.0"
tinyrand-alloc = "0.5.0"

[features]
default = ["integration"]
integration = []