[package]
name = "hex_brains_gui"
version = "0.1.0"
edition = "2021"


[dependencies]
hex_brains_engine = { path = "../engine" }
bevy_ecs = {  version = "0.15.0", features = ["multi_threaded"] }
eframe = { version = "0.23.0", features = ["puffin"] }
egui = "0.23.0"
puffin = "0.17.0"
puffin_http = "0.14.0"
puffin_egui = "0.23.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
parking_lot = "0.12"
